# mod

./: .gitignore  API_ENHANCEMENTS_QUICKSTART.md  API_VALUE.md  CONFIG_SCANNER_README.md  Caddyfile.docker  Dockerfile  IMPLEMENTATION_SUMMARY.md  MOD_ARCHITECTURE.md  QUERY_SETUP.md  README.md  config.json  docker-compose.yml  install.sh  mod.json  package.json  pyproject.toml  query_free.py  requirements.txt  runtests  setup.py  setup.sh  start.sh  stop.sh  suggestions.md  test_api_enhancements.py
mod/core/modrs/: Cargo.toml
mod/core/modrs/docs/: MODULES.md  SDK.md
mod/core/modrs/examples/: basic.rs  create_mod.rs  full_mod.rs  storage.rs
mod/core/modrs/mods/example/: Cargo.toml  mod.rs  mod.toml
mod/core/modrs/mods/example/src/: lib.rs
mod/core/modrs/mods/mod_sdk/src/: lib.rs
mod/core/modrs/src/: lib.rs
mod/core/modrs/src/cli/: git.rs  mod.rs  module.rs  server.rs  utils.rs
mod/core/modrs/src/config/: mod.rs
mod/core/modrs/src/key/: mod.rs
mod/core/modrs/src/key/aes/: mod.rs
mod/core/modrs/src/key/ecdsa/: mod.rs
mod/core/modrs/src/key/solana/: mod.rs
mod/core/modrs/src/key/sr25519/: mod.rs
mod/core/modrs/src/module/: mod.rs
mod/core/modrs/src/server/: mod.rs
mod/core/modrs/src/store/: mod.rs
mod/core/modrs/src/store/ipfs/: mod.rs
mod/core/modrs/src/store/sqlite/: mod.rs
mod/core/modrs/src/utils/: mod.rs
mod/core/modrs/tests/: integration_tests.rs
mod/core/store/store/localfs/: pyproject.toml
mod/core/store/store/localfs/localfs/: mod.py
mod/core/store/store/localfs/tests/: quick_test.py
mod/orbit/_test_debug/arena/: Cargo.toml  DOCUMENTATION_INDEX.md  EXAMPLES.md  QUICKSTART.md  README.md  STATUS.md  TESTING_GUIDE.md  WEB_APP_SUMMARY.md
mod/orbit/_test_debug/arena/agents/random_bot/: agent.rs
mod/orbit/_test_debug/arena/app/: README.md
mod/orbit/_test_debug/arena/app/app/: layout.tsx  page.tsx  providers.tsx
mod/orbit/_test_debug/arena/contracts/: .env.example  ArenaLeaderboard.sol  RewardPool.sol  hardhat.config.js
mod/orbit/_test_debug/arena/contracts/scripts/: deploy.js
mod/orbit/_test_debug/arena/games/tic_tac_toe/: game.rs
mod/orbit/_test_debug/arena/src/: agent.rs  games.rs  results.rs
mod/orbit/_test_debug/bounty/api/: Cargo.toml
mod/orbit/_test_debug/bounty/api/src/: db.rs  main.rs  models.rs
mod/orbit/_test_debug/bt/bt-rs/: Cargo.toml
mod/orbit/_test_debug/bt/bt-rs/src/: rpc.rs  scanner.rs
mod/orbit/_test_debug/chutes/chutes-rs/: Cargo.toml
mod/orbit/_test_debug/chutes/chutes-rs/src/: error.rs  lib.rs  streaming.rs
mod/orbit/_test_debug/ethcopy/ethcopy-rs/: Cargo.toml
mod/orbit/_test_debug/ethcopy/ethcopy-rs/src/: lib.rs  rpc.rs  types.rs
mod/orbit/_test_debug/uniswap/engine/: .env.example  Cargo.toml
mod/orbit/_test_debug/uniswap/engine/src/: discovery.rs  lib.rs  main.rs  performance.rs  routes.rs  whitelist.rs
mod/orbit/_test_debug/uniswap/engine/tests/: integration.rs
mod/orbit/bridge/api/: Cargo.toml  api.py
mod/orbit/bridge/api/src/: config.rs  crypto.rs  lib.rs  main.rs  ratelimit.rs  state.rs  store.rs  validate.rs
mod/orbit/bridge/api/tests/: integration.rs
mod/orbit/bridge/bridge/: Cargo.toml  abi.py  metadata.commune.scale  mod.py  stake.json
mod/orbit/bridge/bridge/src/: main.rs
mod/orbit/claude/src/api/: Cargo.toml  stop.sh
mod/orbit/copytensor/src/api/: Cargo.toml  app.py  models.py
mod/orbit/dns/mod-dns/: Cargo.toml  mod.py
mod/orbit/dns/mod-dns/src/: api.rs  dns.rs  main.rs  p2p.rs  records.rs  store.rs
mod/orbit/evocoin/engine/: Cargo.toml
mod/orbit/evocoin/engine/src/: config.rs  contracts.rs
mod/orbit/hyperliquid/src/api/: Cargo.toml
mod/orbit/model/api/: Cargo.toml
mod/orbit/model/api/src/: main.rs
mod/orbit/modrs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  mod.toml
mod/orbit/modrs/docs/: mod.py
mod/orbit/modrs/examples/: basic.rs  full_mod.rs  mod.py  server.rs
mod/orbit/modrs/mods/: Cargo.toml  Makefile
mod/orbit/modrs/mods/broski/: mod.rs
mod/orbit/modrs/src/: config.rs  crypto.rs  error.rs  git.rs  ipfs.rs  lib.rs  module.rs  server.rs  storage.rs  tree.rs  utils.rs
mod/orbit/modrs/src/cli/: store.rs
mod/orbit/modrs/tests/: mod.py
mod/orbit/multisig/: Cargo.toml  Dockerfile  config.json  docker-compose.yml  docker-entrypoint.sh
mod/orbit/multisig/app/: next.config.js  package.json  tailwind.config.ts
mod/orbit/multisig/app/app/: api.ts  config.ts  globals.css  layout.tsx  page.tsx  types.ts
mod/orbit/multisig/multisig/: mod.py
mod/orbit/multisig/src/: config.rs  main.rs  store.rs  types.rs
mod/orbit/multisig/src/routes/: common.rs  evm.rs  mod.rs  solana.rs  substrate.rs
mod/orbit/near/: Cargo.toml  deploy.sh  fund.sh  test_near.py
mod/orbit/near/src/: mod.py
mod/orbit/near/tests/: mod.py  test_contract.rs
mod/orbit/neartensor/contracts/subnet/: Cargo.toml
mod/orbit/polycopy/polycopy/polycopy-rs/: Cargo.toml
mod/orbit/polymarket/polymarket-rs/: Cargo.toml
mod/orbit/polymarket/polymarket-rs/src/: lib.rs  types.rs
mod/orbit/polymarket/src/api/: Cargo.toml  start.sh  stop.sh
mod/orbit/qbit/: Cargo.toml  Dockerfile  config.json  docker-compose.yml  docker-entrypoint.sh
mod/orbit/qbit/app/: package.json
mod/orbit/qbit/qbit/: mod.py
mod/orbit/qbit/src/: main.rs  store.rs
mod/orbit/qbit/src/circuit/: gate.rs  mod.rs  proof.rs  witness.rs
mod/orbit/qbit/src/consensus/: block.rs  mod.rs  round.rs  state.rs
mod/orbit/qbit/src/vali/: keys.rs  mod.rs  set.rs  validator.rs
mod/orbit/routy/: .gitignore  Cargo.toml  Dockerfile  config.json  docker-compose.yml  docker-entrypoint.sh
mod/orbit/routy/app/: next.config.js  package.json
mod/orbit/routy/app/app/: globals.css  layout.tsx  page.tsx
mod/orbit/routy/examples/: multi_site_demo.sh  simple_server.py
mod/orbit/routy/routy/: mod.py
mod/orbit/routy/src/: config.rs  main.rs  proxy.rs  registry.rs  resources.rs
mod/orbit/securescan/src/api/: Cargo.toml
mod/orbit/staketime/src/rs/: Cargo.toml  build.sh
mod/orbit/uniswap/src/api/: Cargo.toml
(+3709 files in other folders)
