[package]
name = "modrs"
version = "0.1.0"
edition = "2021"
authors = ["mod team"]
description = "Rust implementation of the Mod framework - modular development ecosystem"
license = "MIT"

[lib]
name = "modrs"
path = "src/lib.rs"

[[bin]]
name = "m"
path = "src/bin/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
serde_with = "3.4"

# Filesystem and paths
glob = "0.3"
walkdir = "2.4"
notify = "6.1"

# Cryptography
ed25519-dalek = "2.1"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"

# Ethereum compatibility
ethers = { version = "2.0", features = ["abigen", "ws", "ipc"] }
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }

# HTTP and networking
reqwest = { version = "0.11", features = ["json", "multipart"] }
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
hyper = "1.0"

# CLI and directories
clap = { version = "4.4", features = ["derive", "env"] }
colored = "2.1"
indicatif = "0.17"
dialoguer = "0.11"
dirs = "5.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time and date
chrono = { version = "0.4", features = ["serde"] }

# Storage
rusqlite = { version = "0.30", features = ["bundled"] }
rocksdb = { version = "0.21", optional = true }

# Process management
sysinfo = "0.30"
libc = "0.2"

# Git operations
git2 = "0.18"

# IPFS (optional)
ipfs-api-backend-hyper = { version = "0.6", optional = true }

# AI/OpenRouter (optional)
async-openai = { version = "0.17", optional = true }

# Utils
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"
lazy_static = "1.4"
dashmap = "5.5"
parking_lot = "0.12"
futures = "0.3"
bytes = "1.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
url = "2.5"
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"
criterion = "0.5"

[features]
default = ["full"]
full = ["ipfs", "ai", "rocksdb"]
ipfs = ["ipfs-api-backend-hyper"]
ai = ["async-openai"]
rocksdb-storage = ["rocksdb"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
