[package]
name = "near-token"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
near-sdk = "5.6"
ed25519-dalek = { version = "2", features = ["alloc"] }
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
hex = "0.4"
bs58 = "0.5"

[dev-dependencies]
near-sdk = { version = "5.6", features = ["unit-testing"] }
near-workspaces = "0.14"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["alloc", "rand_core"] }
rand = "0.8"
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
hex = "0.4"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
