[package]
name = "qbit"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
tower-http = { version = "0.5", features = ["cors"] }
hex = "0.4"
