[package]
name = "arena"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Python interop (optional)
pyo3 = { version = "0.20", features = ["auto-initialize"], optional = true }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"], optional = true }

# IPFS integration (optional)
ipfs-api = { version = "0.17", optional = true }
cid = { version = "0.11", optional = true }

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
rand = "0.8"

[[bin]]
name = "arena"
path = "src/main.rs"

[lib]
name = "arena"
path = "src/lib.rs"

[features]
default = []
python = ["pyo3", "pyo3-asyncio"]
ipfs = ["ipfs-api", "cid"]
