[package]
name = "polymarket-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "polymarket_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3
pyo3 = { version = "0.22", features = ["extension-module"] }

# Async
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto / Signing
alloy-primitives = "0.8"
alloy-sol-types = "0.8"
alloy-signer = "0.6"
alloy-signer-local = "0.6"
k256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"

# Math
rust_decimal = { version = "1", features = ["serde-with-str"] }

# Concurrency
dashmap = "6"
parking_lot = "0.12"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# UUID
uuid = { version = "1", features = ["v4"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }
