[package]
name = "mod_example"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Example mod — demonstrates the full ModApi pattern"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mod_sdk = { path = "../mod_sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
