[package]
name = "bt-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "bt_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
dashmap = "6"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
hex = "0.4"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
