[package]
name = "ethcopy-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "ethcopy_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
tokio = { version = "1.35", features = ["full"] }
ethers = { version = "2.0", features = ["abigen", "ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dashmap = "5.5"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
hex = "0.4"
