[package]
name = "uniswap-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP
axum = { version = "0.8", features = ["json", "query"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Ethereum
alloy = { version = "1", features = [
    "providers",
    "provider-http",
    "signers",
    "signer-local",
    "contract",
    "sol-types",
    "network",
    "consensus",
    "rpc-types",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
eyre = "0.6"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
