[package]
name = "copytensor-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "copytensor-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
hex = "0.4"
blake2 = "0.10"
parity-scale-codec = { version = "3", features = ["derive"] }
scale-value = "0.16"
subxt = { version = "0.37", features = ["substrate-compat"] }
subxt-signer = { version = "0.37", features = ["sr25519"] }
sp-core = { version = "31", default-features = false, features = ["std"] }

[profile.release]
opt-level = 2
lto = "thin"
