[package]
name = "polycopy-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "polycopy_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
tokio = { version = "1.35", features = ["full"] }
ethers = { version = "2.0", features = ["abigen", "ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
parking_lot = "0.12"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
rand = "0.8"
hex = "0.4"
