[package]
name = "polymarket-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "polymarket_api"
path = "src/lib.rs"

[[bin]]
name = "polymarket-api"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Error handling
anyhow = "1"
thiserror = "2"

# Crypto (HMAC transport auth for strats)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Concurrency
dashmap = "6"
parking_lot = "0.12"
futures = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
chrono = "0.4"
mockito = "1"
