[package]
name = "securescan-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "securescan-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
sha1 = "0.10"
hex = "0.4"
regex = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
