[package]
name = "staketime"
version = "0.1.0"
edition = "2021"

[lib]
name = "staketime_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py313"] }
tokio = { version = "1", features = ["full"] }
alloy = { version = "0.9", features = ["full"] }
serde = { version = "=1.0.217", features = ["derive"] }
serde_json = "=1.0.138"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
anyhow = "1.0"
hex = "0.4"
